Integrated Dynamic load for Monitor DLLs
Made:
	- Finished Generic Monitor plugin
	- Integrated dynamic load for Monitor DLLs
	- Added DLLExport.h

To Do:
	- Develop oculus rift plugin
	- Merge DLLExport code into IMonitor file

--- a/SSWEProject/SSWECore/SSWECore.vcxproj
+++ b/SSWEProject/SSWECore/SSWECore.vcxproj
@@ -61,6 +61,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)Irrlicht\Irrlicht180\include;%(AdditionalIncludeDirectories);$(SolutionDir)SSWERenders\</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <OpenMPSupport>true</OpenMPSupport>
+      <CallingConvention>Cdecl</CallingConvention>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
