--- a/SSWEProject/SSWE/SSWE.vcxproj
+++ b/SSWEProject/SSWE/SSWE.vcxproj
@@ -61,12 +61,13 @@
       <SDLCheck>false</SDLCheck>
       <AdditionalIncludeDirectories>$(SolutionDir)Irrlicht\Irrlicht180\include;$(SolutionDir)SSWECore\;$(SolutionDir)SSWELib\;$(SolutionDir)SSWERenders\;$(SolutionDir)\OculusSDK\LibOVR\Include;$(SolutionDir)SSWEGenericMonitor\;$(SolutionDir)SSWELib\SSWELib\Device\Monitor\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OpenMPSupport>true</OpenMPSupport>
+      <CallingConvention>Cdecl</CallingConvention>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)SPARK\libs\;$(SolutionDir)Lua52\;$(SolutionDir)SSWELib\Output\;$(SolutionDir)Irrlicht\Irrlicht180\Output;$(SolutionDir)SSWECore\Output\;$(SolutionDir)SSWERenders\Output\;$(SolutionDir)OculusSDK\LibOVR\Lib\Win32;$(SolutionDir)SSWEGenericMonitor\Output\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SSWELib_d.lib;SSWECore_d.lib;SSWERenders_d.lib;lua52.lib;SPARK_debug.lib;SSWEGenericMonitor_d.lib;SPARK_IRR_debug.lib;libovrd.lib;Irrlicht_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)SPARK\libs\;$(SolutionDir)Lua52\;$(SolutionDir)SSWELib\Output\;$(SolutionDir)Irrlicht\Irrlicht180\Output;$(SolutionDir)SSWECore\Output\;$(SolutionDir)SSWERenders\Output\;$(SolutionDir)OculusSDK\LibOVR\Lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SSWELib_d.lib;SSWECore_d.lib;SSWERenders_d.lib;lua52.lib;SPARK_debug.lib;SPARK_IRR_debug.lib;libovrd.lib;Irrlicht_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)..\SSWE\$(TargetName)$(TargetExt)" /y</Command>
@@ -93,8 +94,8 @@
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SSWELib.lib;SSWECore.lib;SSWERenders.lib;lua52.lib;SPARK_debug.lib;SSWEGenericMonitor.lib;SPARK_IRR_debug.lib;Irrlicht.lib;libovr.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)SPARK\libs\;$(SolutionDir)Lua52\;$(SolutionDir)SSWELib\Output\;$(SolutionDir)Irrlicht\Irrlicht180\Output;$(SolutionDir)SSWECore\Output\;$(SolutionDir)SSWERenders\Output\;$(SolutionDir)OculusSDK\LibOVR\Lib\Win32;$(SolutionDir)SSWEGenericMonitor\Output\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SSWELib.lib;SSWECore.lib;SSWERenders.lib;lua52.lib;SPARK_debug.lib;SPARK_IRR_debug.lib;libovrd.lib;Irrlicht.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)SPARK\libs\;$(SolutionDir)Lua52\;$(SolutionDir)SSWELib\Output\;$(SolutionDir)Irrlicht\Irrlicht180\Output;$(SolutionDir)SSWECore\Output\;$(SolutionDir)SSWERenders\Output\;$(SolutionDir)OculusSDK\LibOVR\Lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <PostBuildEvent>
