Update for Forum des PI
Made:
	- Resolved all bugs for when you place an object using the crosses
	- Modified Maya Camera class in Irrlicht for disable input events and then move the objects only if you push the left button of the mouse

	- Added IMonitor methods names in IMonitor class

	- Added enable or disable auto recalculation for shadow lights

	- Fixed Irrlicht 1.8 VS2012 project file

To Do:
	- Work on scaling objects
	- Work on auto scale for crosses

--- a/.gitignore
+++ b/.gitignore
@@ -3594,3 +3594,4 @@ SSWE/data/Nouveau dossier/The Last Remnant - Garden/Maps/water00.tga
 SSWE/data/Nouveau dossier/The Last Remnant - Garden/Maps/wt1x19a01.tga
 SSWE/data/Nouveau dossier/The Last Remnant - Garden/Maps/YMN_flower01.tga
 SSWE/data/Nouveau dossier/The Last Remnant - Garden/TLR_Garden.mtl
+SSWE/Renders/LRussianTree.jpg
