--- a/SSWEProject/SSWELib/SSWELib.vcxproj.filters
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj.filters
@@ -312,7 +312,10 @@
     <ClCompile Include="SSWELib\Device\Monitor\MonitorRegister.cpp">
       <Filter>SSWELib\Device\Monitor</Filter>
     </ClCompile>
-    <ClCompile Include="SSWELib\UserInterfaces\PluginsManager\PluginsManager.cpp">
+    <ClCompile Include="SSWELib\UserInterfaces\PluginsManager\CUIPluginsManager.cpp">
+      <Filter>SSWELib\UserInterfaces\PluginsManager</Filter>
+    </ClCompile>
+    <ClCompile Include="SSWELib\UserInterfaces\PluginsManager\CPluginsManager.cpp">
       <Filter>SSWELib\UserInterfaces\PluginsManager</Filter>
     </ClCompile>
   </ItemGroup>
@@ -542,7 +545,10 @@
     <ClInclude Include="SSWELib\Device\Monitor\DLLExport.h">
       <Filter>SSWELib\Device\Monitor</Filter>
     </ClInclude>
-    <ClInclude Include="SSWELib\UserInterfaces\PluginsManager\PluginsManager.h">
+    <ClInclude Include="SSWELib\UserInterfaces\PluginsManager\CUIPluginsManager.h">
+      <Filter>SSWELib\UserInterfaces\PluginsManager</Filter>
+    </ClInclude>
+    <ClInclude Include="SSWELib\UserInterfaces\PluginsManager\CPluginsManager.h">
       <Filter>SSWELib\UserInterfaces\PluginsManager</Filter>
     </ClInclude>
   </ItemGroup>
