--- a/SSWEProject/SSWEOculusRiftPlugin/SSWEOculusRiftPlugin.vcxproj
+++ b/SSWEProject/SSWEOculusRiftPlugin/SSWEOculusRiftPlugin.vcxproj
@@ -64,7 +64,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>E:\Projets\Projects\Soganatsu\SSWEProject\OculusSDK\LibOVR\Lib\Win32;E:\Projets\Projects\Soganatsu\SSWEProject\Irrlicht\Irrlicht180\Output;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)OculusSDK\LibOVR\Lib\Win32;$(SolutionDir)Irrlicht\Irrlicht180\Output;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>irrlicht_d.lib;libovrd.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -89,7 +89,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>E:\Projets\Projects\Soganatsu\SSWEProject\OculusSDK\LibOVR\Lib\Win32;E:\Projets\Projects\Soganatsu\SSWEProject\Irrlicht\Irrlicht180\Output;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)OculusSDK\LibOVR\Lib\Win32;$(SolutionDir)Irrlicht\Irrlicht180\Output;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>irrlicht.lib;libovr.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
