--- a/SSWEProject/SSWELib/SSWELib.vcxproj.filters
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj.filters
@@ -112,6 +112,12 @@
     <Filter Include="SSWELib\UserInterfaces\PluginsManager">
       <UniqueIdentifier>{80c9630d-fda7-47e1-b8f1-c06627659ccd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="include">
+      <UniqueIdentifier>{97d81519-9b63-4266-891a-1672d9dc20bf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SSWELib\UserInterfaces\Options">
+      <UniqueIdentifier>{17d6ae91-fe75-4c07-ad04-c79bd27a23fc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SSWELib.cpp">
@@ -321,6 +327,9 @@
     <ClCompile Include="SSWELib\UserInterfaces\AnimatorsEditor\CUIEditFPSCamera.cpp">
       <Filter>SSWELib\UserInterfaces\AnimatorsEditor</Filter>
     </ClCompile>
+    <ClCompile Include="SSWELib\UserInterfaces\Options\CUISSWEOptions.cpp">
+      <Filter>SSWELib\UserInterfaces\Options</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SSWELib.h">
@@ -467,9 +476,6 @@
     <ClInclude Include="SSWELib\UserInterfaces\CUIWindowsManager.h">
       <Filter>SSWELib\UserInterfaces</Filter>
     </ClInclude>
-    <ClInclude Include="SSWELib\UserInterfaces\ITool.h">
-      <Filter>SSWELib\UserInterfaces</Filter>
-    </ClInclude>
     <ClInclude Include="SSWELib\UserInterfaces\UIContextMenu.h">
       <Filter>SSWELib\UserInterfaces</Filter>
     </ClInclude>
@@ -536,16 +542,7 @@
     <ClInclude Include="SSWELib\UserInterfaces\NodeFactory\CNodeFactory.h">
       <Filter>SSWELib\UserInterfaces\NodeFactory</Filter>
     </ClInclude>
-    <ClInclude Include="SSWELib\Device\Monitor\IMonitor.h">
-      <Filter>SSWELib\Device\Monitor</Filter>
-    </ClInclude>
-    <ClInclude Include="SSWELib\Device\Monitor\IMonitorRegisterer.h">
-      <Filter>SSWELib\Device\Monitor</Filter>
-    </ClInclude>
     <ClInclude Include="SSWELib\Device\Monitor\MonitorRegister.h">
-      <Filter>SSWELib\Device\Monitor</Filter>
-    </ClInclude>
-    <ClInclude Include="SSWELib\Device\Monitor\DLLExport.h">
       <Filter>SSWELib\Device\Monitor</Filter>
     </ClInclude>
     <ClInclude Include="SSWELib\UserInterfaces\PluginsManager\CUIPluginsManager.h">
@@ -556,6 +553,21 @@
     </ClInclude>
     <ClInclude Include="SSWELib\UserInterfaces\AnimatorsEditor\CUIEditFPSCamera.h">
       <Filter>SSWELib\UserInterfaces\AnimatorsEditor</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DLLExport.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\IMonitor.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\IMonitorRegisterer.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ITool.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="SSWELib\UserInterfaces\Options\CUISSWEOptions.h">
+      <Filter>SSWELib\UserInterfaces\Options</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
