--- a/SSWEProject/SSWECore/SSWECore.vcxproj
+++ b/SSWEProject/SSWECore/SSWECore.vcxproj
@@ -139,6 +139,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClCompile Include="SSWECore\Core\CCore.cpp" />
     <ClCompile Include="SSWECore\Core\CCoreData.cpp" />
     <ClCompile Include="SSWECore\Core\CCoreObjectPlacement.cpp" />
+    <ClCompile Include="SSWECore\Core\CCorePhysics.cpp" />
     <ClCompile Include="SSWECore\SceneNodes\CGridSceneNode.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -152,6 +153,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClInclude Include="SSWECore\Core\CCore.h" />
     <ClInclude Include="SSWECore\Core\CCoreData.h" />
     <ClInclude Include="SSWECore\Core\CCoreObjectPlacement.h" />
+    <ClInclude Include="SSWECore\Core\CCorePhysics.h" />
     <ClInclude Include="SSWECore\SceneNodes\CGridSceneNode.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
