--- a/SSWEProject/SSWECore/SSWECore.vcxproj.filters
+++ b/SSWEProject/SSWECore/SSWECore.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="SSWECore\CCollisionManager.cpp">
       <Filter>SSWECore</Filter>
     </ClCompile>
+    <ClCompile Include="SSWECore\Core\CCorePhysics.cpp">
+      <Filter>SSWECore\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SSWECore.h">
@@ -79,6 +82,9 @@
     </ClInclude>
     <ClInclude Include="SSWECore\CCollisionManager.h">
       <Filter>SSWECore</Filter>
+    </ClInclude>
+    <ClInclude Include="SSWECore\Core\CCorePhysics.h">
+      <Filter>SSWECore\Core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
